--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Family Budget Client</string>
     <string name="package_name">com.thebangias.familybudgetclient</string>
+    <string name="negativeCurrencyPrefix">(</string>
+    <string name="negativeCurrencySuffix">)</string>
 </resources>
